apps/base/homebot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebot
  namespace: homebot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebot
  template:
    metadata:
      labels:
        app: homebot
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: homebot
          image: ghcr.io/home-assistant/home-assistant:2025.7.2
          ports:
            - containerPort: 8123
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: homebot-config
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
      volumes:
        - name: homebot-config
          persistentVolumeClaim:
            claimName: homebot-config
        - name: config-init
          configMap:
            name: homebot-configmap
            items:
              - key: configuration.yaml
                path: configuration.yaml
