apps/base/homebot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebot
  namespace: homebot
spec:
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
  selector:
    app: homebot  type: ClusterIP
