apps/base/homebot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebot
  namespace: homebot
spec:
  ingressClassName: traefik
  rules:
    - host: homebot.landryzetam.net # Ensure this domain is correctly configured in DNS to point to the ingress controller
      http:
        paths:
          - path: / # Root path for the application
            pathType: Prefix
            backend:
              service:
                name: homebot
                port:
                  number: 8123 # Home Assistant service
  tls:
    - hosts:
      - homebot.landryzetam.net      secretName: homebot-tls-secret
